--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: first baseline;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +35,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.textLogo {
+  background: linear-gradient(45deg, #02c3bd 0%, #5899ff 100%, #50bebb 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
 }
